Database file and convert size (I69).